# inn

./: Makefile.am  configure.ac
authprogs/: Makemodule.am
backends/: Makemodule.am
contrib/: Makemodule.am
control/: Makemodule.am
doc/: Makemodule.am
expire/: Makemodule.am
frontends/: Makemodule.am
history/: Makemodule.am
include/: Makemodule.am
innd/: Makemodule.am
innfeed/: Makemodule.am
lib/: Makemodule.am
nnrpd/: Makemodule.am
scripts/: Makemodule.am
storage/: Makemodule.am
